--- a/app/screen.css
+++ b/app/screen.css
@@ -1,6 +1,10 @@
 body {  
-    font: 14px/1.5 helvetica-neue, helvetica, arial, san-serif;  
-    padding:10px;  
+    font-size: 14px/1.5;
+	font-family: "lucida grande",tahoma,verdana,arial,sans-serif;
+	color: #333;
+	line-height: 1.28; 
+	text-align: left;
+	direction: ltr;
 }  
 h1 {  
     margin-top:0;  
